<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainMenu">


    <Button
        android:id="@+id/StartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="#ac806868"
        android:text="@string/StartBtn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/AboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="#ac806868"
        android:text="@string/AboutBtn"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/ScoresBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="#ac806868"
        android:text="@string/ScoresBtn"
        android:textColor="@android:color/white" />
</LinearLayout>